--- a/aboutme1.html
+++ b/aboutme1.html
@@ -22,11 +22,11 @@ INTRESTED IN CODING AND LEARNING NEW THINGS💻 </P></PRE>
 
 
 <center> <p style="border:2px solid ;">want to know expectation vs reality of my college</p></center>
-<a href="http://127.0.0.1:5500/html%20tutorial/evsr.html">👉  <img src="heheboy.jpeg" alt="click here" width="80"></a>
+<a href="evsr.html">👉  <img src="heheboy.jpeg" alt="click here" width="80"></a>
 <br>
 <br>
 <br>
-<center><a href="http://127.0.0.1:5500/html%20tutorial/about%20me.html">👉  <img src="homelogo.png" alt="home" width="50"></a>
+<center><a href="aboutme1.html">👉  <img src="homelogo.png" alt="home" width="50"></a>
 <br>
 
 <pre> 
