--- a/aboutme1.html
+++ b/aboutme1.html
@@ -26,7 +26,7 @@ INTRESTED IN CODING AND LEARNING NEW THINGS💻 </P></PRE>
 <br>
 <br>
 <br>
-<center><a href="aboutme1.html">👉  <img src="homelogo.png" alt="home" width="50"></a>
+<center><a href="index.html">👉  <img src="homelogo.png" alt="home" width="50"></a>
 <br>
 
 <pre> 
