--- a/evsr.html
+++ b/evsr.html
@@ -10,7 +10,7 @@
     <title>EXPECTATION VS REALITY</title>
 </head>
 <body>
- <pre>   <a href="http://127.0.0.1:5500/html%20tutorial/index.html"><img src="homelogo.png" alt="home" width="50"></a>                                                                                          <a href="http://127.0.0.1:5500/html%20tutorial/index.html"><img src="MY PHOTO.jpg" alt="About me" width="50"></a>                            </pre>
+ <pre>   <a href="index.html"><img src="homelogo.png" alt="home" width="50"></a>                                                                                          <a href="aboutme1.html"><img src="MY PHOTO.jpg" alt="About me" width="50"></a>                            </pre>
    <center> <table style="border: 4px solid ;"> 
         <tr>
             <th>
