--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <br><br><br>
     <a href="http://www.iiitranchi.ac.in/"><img src="iiitranchidp.jpeg" alt="iiit ranchi"></a><br><br><br>
     
-  <pre> <a href="http://127.0.0.1:5500/html%20tutorial/index.html"><img src="aboutmelogo.png" alt="ABOUT ME" width="200"></a></pre>
+  <pre> <a href="aboutme1.html"><img src="aboutmelogo.png" alt="ABOUT ME" width="200"></a></pre>
 
-    <PRE> <a href="http://127.0.0.1:5500/html%20tutorial/evsr.html"><img src="evrlogo.jpg" alt="expectation vs reality" width="200", height="100"></a></PRE>        
+    <PRE> <a href="evsr.html"><img src="evrlogo.jpg" alt="expectation vs reality" width="200", height="100"></a></PRE>        
     
 </html>
